--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="frmwrk.css">
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="dark">
 	
 	<div class="navbar">
 		<ul>
