--- a/index.html
+++ b/index.html
@@ -64,6 +64,22 @@
 					<li><a href="#">Link 4</a></li>
 				</ul>
 			</div>
+
+			<div>
+				<pre>
+					<code>
+&#x3C;div class=&#x22;navbar&#x22;&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x3C;ul&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x9;&#x3C;li&#x3E;&#x3C;h1 class=&#x22;title&#x22;&#x3E;TITLE&#x3C;/h1&#x3E;&#x3C;/li&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x9;&#x3C;li&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Link 1&#x3C;/a&#x3E;&#x3C;/li&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x9;&#x3C;li&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Link 2&#x3C;/a&#x3E;&#x3C;/li&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x9;&#x3C;li&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Link 3&#x3C;/a&#x3E;&#x3C;/li&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x9;&#x3C;li&#x3E;&#x3C;a href=&#x22;#&#x22;&#x3E;Link 4&#x3C;/a&#x3E;&#x3C;/li&#x3E;
+&#x9;&#x9;&#x9;&#x9;&#x3C;/ul&#x3E;
+&#x9;&#x9;&#x9;&#x3C;/div&#x3E;
+					</code>
+				</pre>
+			</div>
 			
 			<h2>Navbar 2</h2>
 			<div class="navbar">
