--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>frmwrk example</title>
-	<link rel="stylesheet" href="frmwrk-theme.css">
+	<link rel="stylesheet" href="frmwrk-theme-dark.css">
 	<link rel="stylesheet" href="frmwrk.css">
 	<link rel="stylesheet" href="style.css">
 </head>
