--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>frmwrk example</title>
-	<link rel="stylesheet" href="frmwrk-theme-dark.css">
+	<link rel="stylesheet" href="frmwrk-theme.css">
 	<link rel="stylesheet" href="frmwrk.css">
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -391,6 +391,8 @@
 
 				<div>
 					<div style="margin:2em">
+
+						<input type="range">
 						
 						<frmwrk-slides time="5000">
 							<img src="./images/kitten-0.jpeg" width="259" height="194">
@@ -403,7 +405,7 @@
 
 					</div>
 					<div style="margin:2em">
-						<frmwrk-slides-2 time="5000" style="width:257px; height:183;">
+						<frmwrk-slides-2 time="1000" style="width:257px; height:183;">
 							<img src="./images/kitten-0.jpeg" width="259" height="194">
 							<img src="./images/kitten-1.jpeg" width="257" height="196">
 							<img src="./images/kitten-2.jpeg" width="259" height="194">
