--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>frmwrk example</title>
-	<link rel="stylesheet" href="frmwrk-theme.css">
-	<link rel="stylesheet" href="frmwrk.css">
+	<link rel="stylesheet" href="scss/frmwrk-color.css">
+	<link rel="stylesheet" href="scss/frmwrk.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body class="dark">
@@ -395,33 +395,33 @@
 						<input type="range">
 						
 						<frmwrk-slides time="5000">
-							<img src="./images/kitten-0.jpeg" width="259" height="194">
-							<img src="./images/kitten-1.jpeg" width="257" height="196">
-							<img src="./images/kitten-2.jpeg" width="259" height="194">
-							<img src="./images/kitten-3.jpeg" width="275" height="183">
-							<img src="./images/kitten-4.jpeg" width="275" height="183">
-							<img src="./images/kitten-5.jpeg" width="275" height="183">
+							<img src="./images/kitten-0.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-1.jpeg" width="257" height="196" alt="">
+							<img src="./images/kitten-2.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-3.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-4.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-5.jpeg" width="275" height="183" alt="">
 						</frmwrk-slides>
 
 					</div>
 					<div style="margin:2em">
 						<frmwrk-slides-2 time="1000" style="width:257px; height:183;">
-							<img src="./images/kitten-0.jpeg" width="259" height="194">
-							<img src="./images/kitten-1.jpeg" width="257" height="196">
-							<img src="./images/kitten-2.jpeg" width="259" height="194">
-							<img src="./images/kitten-3.jpeg" width="275" height="183">
-							<img src="./images/kitten-4.jpeg" width="275" height="183">
-							<img src="./images/kitten-5.jpeg" width="275" height="183">
+							<img src="./images/kitten-0.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-1.jpeg" width="257" height="196" alt="">
+							<img src="./images/kitten-2.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-3.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-4.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-5.jpeg" width="275" height="183" alt="">
 						</frmwrk-slides-2>
 					</div>
 					<div style="margin:2em">
 						<frmwrk-slides-2 time="5000" vertical style="width:257px; height:183;">
-							<img src="./images/kitten-0.jpeg" width="259" height="194">
-							<img src="./images/kitten-1.jpeg" width="257" height="196">
-							<img src="./images/kitten-2.jpeg" width="259" height="194">
-							<img src="./images/kitten-3.jpeg" width="275" height="183">
-							<img src="./images/kitten-4.jpeg" width="275" height="183">
-							<img src="./images/kitten-5.jpeg" width="275" height="183">
+							<img src="./images/kitten-0.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-1.jpeg" width="257" height="196" alt="">
+							<img src="./images/kitten-2.jpeg" width="259" height="194" alt="">
+							<img src="./images/kitten-3.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-4.jpeg" width="275" height="183" alt="">
+							<img src="./images/kitten-5.jpeg" width="275" height="183" alt="">
 						</frmwrk-slides-2>
 					</div>
 				</div>
